Closed
Bug 1312304
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::NrIceCtx::Initialize
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | unaffected |
| firefox50 | --- | unaffected |
| firefox51 | - | fixed |
| firefox52 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: bwc)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
58 bytes,
text/x-review-board-request
|
smaug
:
review+
drno
:
review+
gchang
:
approval-mozilla-aurora+
|
Details |
This bug was filed from the Socorro interface and is
report bp-6791f524-f616-46f2-8b74-17d022161023.
=============================================================
Low-volume crash, has only happened 9 times across two installations, all Mac. It's a MOZ_CRASH() on an unexpected path (with ICE_POLICY_NONE).
bwc, any ideas?
Flags: needinfo?(docfaraday)
Updated•9 years ago
|
Rank: 18
Priority: -- → P1
| Assignee | ||
Comment 1•9 years ago
|
||
I think we should just remove the MOZ_CRASH.
Assignee: nobody → docfaraday
Flags: needinfo?(docfaraday)
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8803900 [details]
Bug 1312304: Don't MOZ_CRASH when we use ICE policy "none".
https://reviewboard.mozilla.org/r/88114/#review87090
We can go ahead with this as it will remove the crash, although I would prefer a better solution if someone uses "none" as iceTransportPolicy value (see below).
::: media/mtransport/nricectx.cpp:539
(Diff revision 1)
> UINT4 flags = offerer_ ? NR_ICE_CTX_FLAGS_OFFERER:
> NR_ICE_CTX_FLAGS_ANSWERER;
> flags |= NR_ICE_CTX_FLAGS_AGGRESSIVE_NOMINATION;
> switch (policy_) {
> case ICE_POLICY_NONE:
> - MOZ_CRASH();
> + // This will suppress gathering and ICE checks.
From my own brief testing this case apparently happens when you try to use "none" as your iceTransportPolicy value. Values like "foobar" are rejected with a TypeError on the console log. I'm wondering if it would make more sense if "none" would also result in the same TypeError message, rather then this probably somewhat unexpected behavior.
Attachment #8803900 -
Flags: review?(drno) → review+
| Assignee | ||
Comment 4•9 years ago
|
||
| mozreview-review-reply | ||
Comment on attachment 8803900 [details]
Bug 1312304: Don't MOZ_CRASH when we use ICE policy "none".
https://reviewboard.mozilla.org/r/88114/#review87090
> From my own brief testing this case apparently happens when you try to use "none" as your iceTransportPolicy value. Values like "foobar" are rejected with a TypeError on the console log. I'm wondering if it would make more sense if "none" would also result in the same TypeError message, rather then this probably somewhat unexpected behavior.
Hmm, let me just remove the "none" value from the enum, since it isn't in the spec anymore, and it will fox this bug.
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8803900 -
Attachment is obsolete: true
Comment 6•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8803992 [details]
Bug 1312304: Remove ICE policy "none".
https://reviewboard.mozilla.org/r/88172/#review87116
Attachment #8803992 -
Flags: review?(bugs) → review+
Comment 7•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8803992 [details]
Bug 1312304: Remove ICE policy "none".
https://reviewboard.mozilla.org/r/88172/#review87188
Attachment #8803992 -
Flags: review?(drno) → review+
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bf39193c8b6e
Remove ICE policy "none". r=drno,smaug
Comment 9•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment 10•9 years ago
|
||
[Tracking Requested - why for this release]: crash regression
Crash introduced in https://hg.mozilla.org/mozilla-central/rev/2f5a249215f6#l1.16
STR: Run http://jsfiddle.net/jib1/j3dyfczd/
Still affects web-platform-tests [1]
We should uplift this to 51. Byron can you request uplift?
[1] https://github.com/w3c/web-platform-tests/pull/4062#issuecomment-255577096
Blocks: 1297416
Has STR: --- → yes
status-firefox49:
--- → unaffected
status-firefox50:
--- → unaffected
status-firefox51:
--- → affected
tracking-firefox51:
--- → ?
Flags: needinfo?(docfaraday)
Keywords: regression
| Assignee | ||
Comment 11•9 years ago
|
||
Comment on attachment 8803992 [details]
Bug 1312304: Remove ICE policy "none".
Approval Request Comment
[Feature/regressing bug #]:
Bug 1297416
[User impact if declined]:
Web content can cause crashes in debug builds at will (MOZ_CRASH).
[Describe test coverage new/current, TreeHerder]:
No new test coverage.
[Risks and why]:
Quite low. We've removed functionality on this one.
[String/UUID change made/needed]:
None.
Flags: needinfo?(docfaraday)
Attachment #8803992 -
Flags: approval-mozilla-aurora?
Comment 13•9 years ago
|
||
Comment on attachment 8803992 [details]
Bug 1312304: Remove ICE policy "none".
Fix a crash. Take it in 51 aurora.
Attachment #8803992 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 14•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
Version: unspecified → 51 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•