Bug 1312304: Remove ICE policy "none". r=drno r=smaug a=gchang

MozReview-Commit-ID: 2adsRJ6pFnD