media/mtransport/nricectx.h
@@ -209,8 +209,7 @@ class NrIceCtx {
                      ICE_CONTROLLED
   };
 
-  enum Policy { ICE_POLICY_NONE,
-                ICE_POLICY_RELAY,
+  enum Policy { ICE_POLICY_RELAY,
                 ICE_POLICY_NO_HOST,
                 ICE_POLICY_ALL
   };
